--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -991,6 +991,8 @@
           href: managed-instance/alerts-create.md
         - name: マネージド インスタンスでのフェールオーバーの手動開始
           href: managed-instance/user-initiated-failover.md
+        - name: ログ再生サービスを使用してデータベースを移行する
+          href: managed-instance/log-replay-service-migrate.md
     - name: サンプル
       items:
         - name: Azure CLI
