--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -52,7 +52,7 @@
       href: concepts-upgrades.md
 - name: 操作方法ガイド
   items:
-    - name: Azure VMware Solution を有効にする
+    - name: ホスト クォータを要求し、Azure VMware Solution を有効にする
       href: enable-azure-vmware-solution.md
     - name: 予約インスタンスを使用してコストを削減する
       href: reserved-instance.md
