--- a/articles/dms/index.yml
+++ b/articles/dms/index.yml
@@ -10,12 +10,12 @@ metadata:
   ms.service: dms
   ms.topic: landing-page
   ms.custom: seo-azure-migrate
-  ms.openlocfilehash: c2461fa9eb2c326141d244fbc576355226f891dd
-  ms.sourcegitcommit: cd9754373576d6767c06baccfd500ae88ea733e4
+  ms.openlocfilehash: 2703c34dc56303103c682bed740a34991a6471f6
+  ms.sourcegitcommit: 97c48e630ec22edc12a0f8e4e592d1676323d7b0
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/20/2020
-  ms.locfileid: "94962707"
+  ms.lasthandoff: 02/18/2021
+  ms.locfileid: "101092169"
 landingContent:
 - title: Azure Database Migration Service について
   linkLists:
@@ -57,29 +57,27 @@ landingContent:
   linkLists:
   - linkListType: tutorial
     links:
-    - text: SQL DB 単一データベースに移行する - オンライン
-      url: tutorial-sql-server-azure-sql-online.md
-    - text: SQL DB 単一データベースに移行する - オフライン
+    - text: Azure SQL Database への移行
       url: tutorial-sql-server-to-azure-sql.md
-    - text: SQL DB マネージ インスタンスに移行する - オンライン
+    - text: Azure SQL Managed Instance への移行 (オンライン)
       url: tutorial-sql-server-managed-instance-online.md
-    - text: SQL DB マネージ インスタンスに移行する - オフライン
+    - text: SQL Managed Instance への移行 (オフライン)
       url: tutorial-sql-server-to-managed-instance.md
-    - text: RDS SQL Server を SQL DB 単一データベース/マネージド インスタンスに移行する - オンライン
+    - text: Azure SQL への RDS SQL Server の移行
       url: tutorial-rds-sql-server-azure-sql-and-managed-instance-online.md
   - linkListType: reference
     links:
-    - text: 既知の問題 - SQL DB 単一データベースへのオンライン移行
+    - text: 既知の問題 - SQL Database へのオンライン移行
       url: known-issues-azure-sql-online.md
-    - text: 既知の問題 - SQL DB マネージド インスタンスへのオンライン移行
+    - text: 既知の問題 - SQL Managed Instance へのオンライン移行
       url: known-issues-azure-sql-db-managed-instance-online.md
-    - text: SQL DB マネージド インスタンスの移行のためのネットワーク トポロジ
+    - text: SQL Managed Instance の移行のためのネットワーク トポロジ
       url: resource-network-topologies.md
-    - text: SQL Server から SQL DB マネージド インスタンスへオンライン移行するためのカスタム ロール
+    - text: SQL Server から SQL Managed Instance へオンライン移行するためのカスタム ロール
       url: resource-custom-roles-sql-db-managed-instance.md
   - linkListType: video
     links:
-    - text: SQL Server 2008 を SQL DB マネージド インスタンスに移行する
+    - text: SQL Server 2008 を SQL Managed Instance に移行する
       url: https://azure.microsoft.com/resources/videos/how-to-migrate-sql-server-2008-or-r2-to-azure-sqldbmi/
 - title: オープンソース データベースを Azure に移行する
   linkLists:
