--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -24,9 +24,9 @@
       items:
         - name: Firebase Cloud Messaging
           items:
-            - name: すべての登録にプッシュ通知を送信する (SDK バージョン 1.0.0-preview1)
+            - name: すべての登録にプッシュ通知を送信する (現行 SDK)
               href: android-sdk.md
-            - name: すべての登録にプッシュ通知を送信する (SDK バージョン 0.6)
+            - name: すべての登録にプッシュ通知を送信する (レガシ SDK)
               href: notification-hubs-android-push-notification-google-fcm-get-started.md
             - name: 特定のデバイスにプッシュ通知を送信する
               href: push-notifications-android-specific-devices-firebase-cloud-messaging.md
@@ -50,10 +50,10 @@
           items:
             - name: iOS チュートリアルの前提条件
               href: ios-sdk-get-started.md
-            - name: Objective-C (バージョン 3.0.0-preview1)
-              href: ios-sdk-300.md
-            - name: Objective-C (バージョン 2.0.4)
-              href: ios-sdk-204.md
+            - name: Objective-C (現行 SDK)
+              href: ios-sdk-current.md
+            - name: Objective-C (レガシ SDK)
+              href: ios-sdk-legacy.md
         - name: 特定のデバイスにプッシュ通知を送信する
           href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
         - name: 特定のユーザーにプッシュ通知を送信する
