--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -3,7 +3,7 @@
 - name: 概要
   expanded: true
   items:
-    - name: Azure キューとは
+    - name: Azure Queue とは
       href: storage-queues-introduction.md
 - name: クイックスタート
   items:
@@ -229,7 +229,7 @@
           href: storage-ruby-how-to-use-queue-storage.md
     - name: キューの管理
       items:
-        - name: Azure キュー用の PowerShell
+        - name: Azure Queue 用の PowerShell
           href: storage-powershell-how-to-use-queues.md
         - name: 中国、政府機関、ドイツのクラウド用の PowerShell
           href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
