--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -244,6 +244,8 @@
           href: how-to-use-android-map-control-library.md
         - name: マップのスタイルを変更する
           href: set-android-map-styles.md
+        - name: マップにコントロールを追加する
+          href: map-add-controls-android.md
         - name: データ ソースを作成する
           href: create-data-source-android-sdk.md
         - name: シンボル レイヤーを追加する
@@ -256,8 +258,12 @@
           href: android-map-add-line-layer.md
         - name: 多角形レイヤーを追加する
           href: how-to-add-shapes-to-android-map.md
+        - name: 多角形浮き出しレイヤーを追加する
+          href: map-extruded-polygon-android.md
         - name: ヒート マップ レイヤーを追加する
           href: map-add-heat-map-layer-android.md
+        - name: イメージ レイヤーを追加する
+          href: map-add-image-layer-android.md
         - name: タイル レイヤーを追加する
           href: how-to-add-tile-layer-android-map.md
         - name: トラフィック データを表示する
