--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -242,4 +242,4 @@
     - name: Azure Security Center
       href: ../../security-center/index.yml
     - name: Azure セキュリティ ベンチマーク基盤ブループリント サンプル
-      href: ../../governance/blueprints/samples/azure-security-benchmark-foundation/index.yml
+      href: ../../governance/blueprints/samples/azure-security-benchmark-foundation/index.md
