--- a/articles/cognitive-services/Bing-Image-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Image-Search/toc.yml
@@ -69,7 +69,7 @@
     - name: Azure PowerShell リファレンス
       href: /powershell/module/azurerm.cognitiveservices/
     - name: Azure CLI リファレンス
-      href: /cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
+      href: /cli/azure/cognitiveservices#az_cognitiveservices_list
     - name: SDK
       items:
         - name: .NET
